--- a/style.css
+++ b/style.css
@@ -37,6 +37,9 @@
 .site-header-inner{
 	background-color: #009688;
 	color:white;
+	border-style: solid;
+    border-width: 2px 10px 4px 20px;
+    border-color: #009688;
 }
 /*changes the links to black*/
 a{
@@ -66,4 +69,7 @@ body{
 
 header{
 	font-family: Didact Gothic;
+}
+.lead{
+display: none;
 }
