--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@
 	background-color: #009688;
 	color:white;
 	border-style: solid;
-    border-width: 2px 10px 4px 20px;
+    border-width:50px;
     border-color: #009688;
 }
 /*changes the links to black*/
