changed the size in the jumbotron

--- a/style.css
+++ b/style.css
@@ -82,7 +82,11 @@ display: none;
 input[type=search]{
 	display: none;
 }
-
+/* changeed the size in the jumbotron*/
+.container .jumbotron, .container-fluid .jumbotron{
+	height: 300px;
+    width: 50%;
+}
 
 
 
